logs/watchdog_20251013_0500.log
[13/10/2025  5:00:01,66] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  5:00:01,89] END WATCHDOG 
